--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,1 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <!--<mat-toolbar>Menu</mat-toolbar>-->
-    <mat-nav-list color="primary">
-      <a mat-list-item routerLink="#"><mat-icon>dashboard</mat-icon>Dashboard</a>
-      <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"><mat-icon>person</mat-icon>User Profile</a>
-      <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"> <mat-icon>content_paste</mat-icon>Favourite List</a>
-      <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"> <mat-icon>library_books</mat-icon>Typography</a>
-      <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"> <mat-icon>location_on</mat-icon>Maps</a>
-      <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"> <mat-icon>calendar_today</mat-icon>Calendar</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <!-- Toolbar -->
-    <mat-toolbar color="primary" role="toolbar">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <div class="spacer"></div>
-      <span>X Shopping List</span>
-      <div class="spacer"></div>
-      <a routerLink="#">Login</a>
-    </mat-toolbar>
-    
-    <!-- Content Here -->
-    <router-outlet></router-outlet>
-
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<app-navbar></app-navbar>
