feat: add footer

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -21,7 +21,8 @@
 }
 
 ::ng-deep .mat-sidenav {
-  background-color: #673ab7;
+  margin-top: 54px;
+  background-color: #673ab7a6;
   border-radius: 20px;
   height: fit-content;
 }
