style:  add image

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -30,7 +30,7 @@
 /*  BACKGROUND IMAGE */
 ::ng-deep .mat-sidenav-container {
   /* The image used */
-  background-image: url("/assets/images/coffee-2608864_1920_low.jpg");
+  background-image: url("/assets/images/coffee.jpg");
 
   /* Full height */
   height: 100%;
