feat: add HomeComponent

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
-<p>home works!</p>
-<a mat-fab>
-    <mat-icon>add</mat-icon>
-</a>
+// WORKS After
+<div class="row justify-content-end">
+    <a mat-fab>
+        <mat-icon>add</mat-icon>
+    </a>
+</div>
