--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,21 +1,35 @@
 <mat-sidenav-container>
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    fixedInViewport
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'"
+    [opened]="(isHandset$ | async) === false"
+  >
     <!--<mat-toolbar>Menu</mat-toolbar>-->
     <mat-nav-list color="primary">
-      <a mat-list-item routerLink="#"><mat-icon>dashboard</mat-icon>Dashboard</a>
+      <a mat-list-item routerLink="#"
+        ><mat-icon>dashboard</mat-icon>Dashboard</a
+      >
       <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"><mat-icon>person</mat-icon>User Profile</a>
+      <a mat-list-item routerLink="#">
+        <mat-icon>content_paste</mat-icon>Favorite</a
+      >
       <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"> <mat-icon>content_paste</mat-icon>Favourite List</a>
+      <a mat-list-item routerLink="#"
+        ><mat-icon>person</mat-icon>User Profile</a
+      >
       <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"> <mat-icon>library_books</mat-icon>Typography</a>
+      <a mat-list-item routerLink="#">
+        <mat-icon>library_books</mat-icon>Typography</a
+      >
       <mat-divider></mat-divider>
       <a mat-list-item routerLink="#"> <mat-icon>location_on</mat-icon>Maps</a>
       <mat-divider></mat-divider>
-      <a mat-list-item routerLink="#"> <mat-icon>calendar_today</mat-icon>Calendar</a>
+      <a mat-list-item routerLink="#">
+        <mat-icon>calendar_today</mat-icon>Calendar</a
+      >
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -26,7 +40,8 @@
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+        *ngIf="isHandset$ | async"
+      >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <div class="spacer"></div>
@@ -34,12 +49,13 @@
       <div class="spacer"></div>
       <a routerLink="#">Login</a>
     </mat-toolbar>
-    
-    <!-- Content Here -->
-    <div class="container-fluid">
+
+    <!-- Main -->
+    <div class="container">
       <router-outlet></router-outlet>
     </div>
 
-
+    <!-- Footer -->
+    <app-footer></app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
