--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,38 @@
-// WORKS After
-<div class="row justify-content-end">
+<div class="mt-5 text-center">
+  <h1>
+      <span my-font>
+          Your shopping list
+      </span>
+    <br />
+    <span class="font-weight-light">
+      anytime,<br />
+      anywhere!
+    </span>
+  </h1>
+  <h1>
     <a mat-fab>
-        <mat-icon>add</mat-icon>
+      <mat-icon>add</mat-icon>
     </a>
+    <br />Just create your personal list
+  </h1>
+  <h1>Personal ... Not quite!</h1>
+  <h3 class="text-center">
+    If you want you can share it<br />
+    with your family, friends or whoever you want. <br />You can create
+    different lists according to your needs:
+  </h3>
+  <div class="d-flex justify-content-between row px-5 pb-5 mb0">
+    <div class="col-xs text-left pr-3">
+      <h3>-grocery store</h3>
+      <h3>-food additives</h3>
+    </div>
+    <div class="col-xs text-left pr-3">
+      <h3>-pharmacy</h3>
+      <h3>-hardware</h3>
+    </div>
+    <div class="col-xs text-left">
+      <h3>-shopping centre</h3>
+      <h3>-or whatever you can think of</h3>
+    </div>
+  </div>
 </div>
