--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,15 +1,3 @@
-.sidenav-container {
-  height: 100%;
-}
-
-.sidenav {
-  width: 200px;
-}
-
-.sidenav .mat-toolbar {
-  background: inherit;
-}
-
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
@@ -21,15 +9,14 @@
 }
 
 ::ng-deep .mat-sidenav {
-  margin-top: 54px;
-  background-color: #673ab7a6;
-  border-radius: 20px;
-  height: fit-content;
+  background-image: url("/assets/images/coffee.jpg");
+  background-size: cover;
+  background-position-x: right;
 }
 
 /*  BACKGROUND IMAGE */
 ::ng-deep .mat-sidenav-container {
-  /* The image used */
+  
   background-image: url("/assets/images/coffee.jpg");
 
   /* Full height */
@@ -40,3 +27,4 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
