--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -51,7 +51,7 @@
     </mat-toolbar>
 
     <!-- Main -->
-    <div class="container">
+    <div class="container h-99">
       <router-outlet></router-outlet>
     </div>
 
