feat: add api url

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     </span>
   </h1>
   <h1>
-    <a mat-fab>
+    <a routerLink="/shopping-list-create" mat-fab>
       <mat-icon>add</mat-icon>
     </a>
     <br />Just create your personal list
