refactor: route update

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -45,7 +45,9 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <div class="spacer"></div>
-      <span>X Shopping List</span>
+      <a routerLink="/">
+        <span>X Shopping List</span>
+      </a>
       <div class="spacer"></div>
       <a routerLink="#">Login</a>
     </mat-toolbar>
