refactor: update component folder name

--- a/src/app/shoppinglist/create-component/shoppinglist-create.component.html
+++ b/src/app/shoppinglist/create-component/shoppinglist-create.component.html
@@ -1,8 +1,8 @@
 
-<div class="conteiner my-5">
-  <div class="row h-100 justify-content-center align-items-center my-5">
+<div class="conteiner my-5 pt-5">
+  <div class="row h-100 justify-content-center align-items-center">
     <h1>Create New Shopping List</h1>
-    <div class="col-12 my-5">
+    <div class="col-12">
       <form [formGroup]="addShopFormGroup"  (ngSubmit)="onSubmit()" class="row justify-content-center align-items-cente text-center mt-4">
         <p>
             <mat-form-field appearance="outline" class="example-full-width">
