refactor: update login router link

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -49,7 +49,7 @@
         <span>X Shopping List</span>
       </a>
       <div class="spacer"></div>
-      <a routerLink="#">Login</a>
+      <a routerLink="user/login">Login</a>
     </mat-toolbar>
 
     <!-- Main -->
