--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,1 +1,92 @@
-<p>login works!</p>
+<div class="mx-sm-5 pb-5 px-sm-5">
+  <div class="justify-content-center bg-white-transparent">
+    <div class="card bg-transparent shadow border-0">
+      <div class="card-body px-lg-5 py-lg-5">
+        <div class="text-center text-muted mb-4">
+          <small>Login with</small>
+        </div>
+        <form role="form">
+          <div class="form-group mb-3" [ngClass]="{ focused: focus === true }">
+            <div class="input-group input-group-alternative">
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  ><i class="ni ni-email-83"></i
+                ></span>
+              </div>
+              <input
+                class="form-control"
+                placeholder="Email"
+                type="email"
+                (focus)="focus = true"
+                (blur)="focus = false"
+              />
+            </div>
+          </div>
+          <div class="form-group" [ngClass]="{ focused: focus1 === true }">
+            <div class="input-group input-group-alternative">
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  ><i class="ni ni-lock-circle-open"></i
+                ></span>
+              </div>
+              <input
+                class="form-control"
+                placeholder="Password"
+                type="password"
+                (focus)="focus1 = true"
+                (blur)="focus1 = false"
+              />
+            </div>
+          </div>
+          <div
+            class="custom-control custom-control-alternative custom-checkbox"
+          >
+            <input
+              class="custom-control-input"
+              id=" customCheckLogin"
+              type="checkbox"
+            />
+            <label class="custom-control-label" for=" customCheckLogin">
+              <span>Remember me</span>
+            </label>
+          </div>
+         
+          <div class="text-center">
+            <button type="button" class="btn btn-primary my-4">Login</button>
+          </div>
+          <div class="card bg-transparent">
+            <div class="text-muted text-center mb-3">
+              <small>Or login with</small>
+            </div>
+            <div class="btn-wrapper text-center row justify-content-center">
+              <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
+                <span class="btn-inner--icon">
+                  <img src="./assets/images/icons/github.svg" />
+                </span>
+                <span class="btn-inner--text">Github</span>
+              </a>
+              <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
+                <span class="btn-inner--icon">
+                  <img src="./assets/images/icons/google.svg" />
+                </span>
+                <span class="btn-inner--text">Google</span>
+              </a>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="row mt-3 mb-5 px-5">
+      <div class="col-6 pb-3">
+        <a href="javascript:void(0)" class="text-light">
+          <small>Forgot password?</small>
+        </a>
+      </div>
+      <div class="col-6 text-right pb-3">
+        <a href="javascript:void(0)" class="text-light">
+          <small>Create new account</small>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
