--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,9 +1,22 @@
 <div class="mx-sm-5 pb-5 px-sm-5">
-  <div class="justify-content-center bg-white-transparent">
+  <div class="justify-content-center bg-white-transparent mb-5">
+    <div class="row px-5">
+      <div class="col-6 pt-3">
+        <a routerLink="/user/register" class="text-light">
+          <small>Create new account</small>
+        </a>
+      </div>
+      <div class="col-6 pt-3 text-right">
+        <a routerLink="javascript:void(0)" class="text-light">
+          <small>Forgot password?</small>
+        </a>
+      </div>
+      
+    </div>
     <div class="card bg-transparent shadow border-0">
       <div class="card-body px-lg-5 py-lg-5">
         <div class="text-center text-muted mb-4">
-          <small>Login with</small>
+          <small class="yellow">Login with</small>
         </div>
         <form role="form">
           <div class="form-group mb-3" [ngClass]="{ focused: focus === true }">
@@ -55,17 +68,17 @@
             <button type="button" class="btn btn-primary my-4">Login</button>
           </div>
           <div class="card bg-transparent">
-            <div class="text-muted text-center mb-3">
-              <small>Or login with</small>
+            <div class="text-muted text-center mt-2 mb-3">
+              <small class="yellow">Or login with</small>
             </div>
             <div class="btn-wrapper text-center row justify-content-center">
-              <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
+              <a routerLink="javascript:void(0)" class="btn btn-neutral btn-icon">
                 <span class="btn-inner--icon">
                   <img src="./assets/images/icons/github.svg" />
                 </span>
                 <span class="btn-inner--text">Github</span>
               </a>
-              <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
+              <a routerLink="javascript:void(0)" class="btn btn-neutral btn-icon">
                 <span class="btn-inner--icon">
                   <img src="./assets/images/icons/google.svg" />
                 </span>
@@ -76,17 +89,6 @@
         </form>
       </div>
     </div>
-    <div class="row mt-3 mb-5 px-5">
-      <div class="col-6 pb-3">
-        <a href="javascript:void(0)" class="text-light">
-          <small>Forgot password?</small>
-        </a>
-      </div>
-      <div class="col-6 text-right pb-3">
-        <a href="javascript:void(0)" class="text-light">
-          <small>Create new account</small>
-        </a>
-      </div>
-    </div>
+    
   </div>
 </div>
