--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,1 +1,96 @@
-<p>register works!</p>
+<div class="justify-content-center pb-5">
+  <div class="col-lg-5">
+    <div class="card bg-transparent shadow border-0 mt-3">
+
+      <div class="card bg-white-transparent mx-3">
+        <div class="text-muted text-center mt-3 mb-2">
+          <small class="yellow">Sign up with</small>
+        </div>
+        <div class="btn-wrapper text-center row justify-content-center pb-4">
+          <a routerLink="javascript:void(0)" class="btn btn-neutral btn-icon">
+            <span class="btn-inner--icon">
+              <img src="./assets/images/icons/github.svg" />
+            </span>
+            <span class="btn-inner--text">Github</span>
+          </a>
+          <a routerLink="javascript:void(0)" class="btn btn-neutral btn-icon">
+            <span class="btn-inner--icon">
+              <img src="./assets/images/icons/google.svg" />
+            </span>
+            <span class="btn-inner--text">Google</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="card-body px-lg-5 py-lg-5">
+        <div class="text-center text-muted mb-4">
+          <small class="yellow">Or sign up with credentials</small>
+        </div>
+        <form role="form">
+          <div class="form-group" [ngClass]="{ focused: focus1 === true }">
+            <div class="input-group input-group-alternative mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  ><i class="ni ni-email-83"></i
+                ></span>
+              </div>
+              <input
+                class="form-control"
+                placeholder="Email"
+                type="email"
+                (focus)="focus1 = true"
+                (blur)="focus1 = false"
+              />
+            </div>
+          </div>
+          <div class="form-group" [ngClass]="{ focused: focus2 === true }">
+            <div class="input-group input-group-alternative">
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  ><i class="ni ni-lock-circle-open"></i
+                ></span>
+              </div>
+              <input
+                class="form-control"
+                placeholder="Password"
+                type="password"
+                (focus)="focus2 = true"
+                (blur)="focus2 = false"
+              />
+            </div>
+          </div>
+          <div class="text-muted font-italic">
+            <small
+              >password strength:
+              <span class="text-success font-weight-700">strong</span>
+            </small>
+          </div>
+          <div class="row my-4">
+            <div class="col-12">
+              <div
+                class="custom-control custom-control-alternative custom-checkbox"
+              >
+                <input
+                  class="custom-control-input"
+                  id="customCheckRegister"
+                  type="checkbox"
+                />
+                <label class="custom-control-label" for="customCheckRegister">
+                  <span
+                    >I agree with the
+                    <a href="javascript:void(0)">Privacy Policy</a>
+                  </span>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="text-center">
+            <button type="button" class="btn btn-primary mt-4">
+              Create account
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
