--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,6 +1,5 @@
 <div class="mx-sm-5 pb-5 px-sm-5">
   <div class="justify-content-center mb-4">
-
     <div class="row px-5 pt-4 pb-2">
       <div class="col-6">
         <a routerLink="/user/register" class="text-light">
@@ -39,7 +38,7 @@
         <div class="text-center text-muted mb-4">
           <small class="yellow">Or login with credentials</small>
         </div>
-        <form role="form">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <div class="form-group mb-3" [ngClass]="{ focused: focus === true }">
             <div class="input-group input-group-alternative">
               <div class="input-group-prepend">
@@ -49,12 +48,21 @@
               </div>
               <input
                 class="form-control"
+                formControlName="email"
                 placeholder="Email"
                 type="email"
                 (focus)="focus = true"
                 (blur)="focus = false"
               />
             </div>
+            <p *ngIf="email.invalid && email.errors && email.touched">
+              <small class="text-danger" *ngIf="email.hasError('required')">
+                Email is required!
+              </small>
+              <small class="text-danger" *ngIf="email.hasError('pattern')">
+                Please provide a valid email address
+              </small>
+            </p>
           </div>
           <div class="form-group" [ngClass]="{ focused: focus1 === true }">
             <div class="input-group input-group-alternative">
@@ -65,12 +73,23 @@
               </div>
               <input
                 class="form-control"
+                formControlName="password"
                 placeholder="Password"
                 type="password"
                 (focus)="focus1 = true"
                 (blur)="focus1 = false"
               />
             </div>
+            <p *ngIf="password.invalid && password.errors && password.touched">
+              <small class="text-danger" *ngIf="password.hasError('required')">
+                Password is required!
+              </small>
+              <small class="text-danger" *ngIf="password.hasError('minlength')">
+                The minimum length for this field is
+                {{ password.errors.minlength.requiredLength }}
+                characters.
+              </small>
+            </p>
           </div>
           <div
             class="custom-control custom-control-alternative custom-checkbox"
@@ -84,13 +103,19 @@
               <span>Remember me</span>
             </label>
           </div>
-         
+          <p *ngIf="errorMessage" class="text-danger text-center mb-0 mt-1">
+            {{errorMessage}}
+          </p>
           <div class="text-center">
-            <button type="button" class="btn btn-primary my-4">Login</button>
+            <button 
+            type="submit" 
+            class="btn btn-primary my-4" 
+            [disabled]="loginForm.invalid"
+            >
+            Login</button>
           </div>
         </form>
       </div>
     </div>
-    
   </div>
 </div>
