feat: use loading component

--- a/src/app/shoppinglist/create-component/shoppinglist-create.component.html
+++ b/src/app/shoppinglist/create-component/shoppinglist-create.component.html
@@ -1,28 +1,42 @@
-
 <div class="conteiner my-5 pt-5">
   <div class="row h-100 justify-content-center align-items-center">
     <h1>Create New Shopping List</h1>
     <div class="col-12">
-      <form [formGroup]="addShopFormGroup"  (ngSubmit)="onSubmit()" class="row justify-content-center align-items-cente text-center mt-4">
+      <form
+        [formGroup]="addShopFormGroup"
+        (ngSubmit)="onSubmit()"
+        class="row justify-content-center align-items-cente text-center mt-4"
+      >
         <p>
-            <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>Shopping List Name</mat-label>
-              <input 
-                matInput 
-                type="text"
-                placeholder="Type new shopping list name"
-                formControlName="shoppinglistName" 
-                >
-              <mat-error *ngIf="checkError('shoppinglistName', 'required')">Shopping List Name is required</mat-error>
-              <mat-error *ngIf="checkError('shoppinglistName', 'minlength')">Shopping List Name should be more than 3 characters</mat-error>
-              <mat-error *ngIf="checkError('shoppinglistName', 'maxlength')">Shopping List Name should be less than 20 characters</mat-error>
-            </mat-form-field>
-          </p>       
-        <button mat-stroked-button type="submit" [disabled]="!addShopFormGroup.valid" class="btn btn-primary ml-5 mb-30 mt-1">Create</button>
-      </form>
-      </div>
+          <mat-form-field appearance="outline" class="example-full-width">
+            <mat-label>Shopping List Name</mat-label>
+            <input
+              matInput
+              type="text"
+              placeholder="Type new shopping list name"
+              formControlName="shoppinglistName"
+            />
+            <mat-error *ngIf="checkError('shoppinglistName', 'required')"
+              >Shopping List Name is required</mat-error
+            >
+            <mat-error *ngIf="checkError('shoppinglistName', 'minlength')"
+              >Shopping List Name should be more than 3 characters</mat-error
+            >
+            <mat-error *ngIf="checkError('shoppinglistName', 'maxlength')"
+              >Shopping List Name should be less than 20 characters</mat-error
+            >
+          </mat-form-field>
+        </p>
+        <button
+        mat-stroked-button
+        type="submit"
+        [disabled]="!addShopFormGroup.valid"
+        class="btn btn-primary ml-5 mb-30 mt-1"
+        >
+        Create
+      </button>
+    </form>
+    <app-loading [isLoading]="isLoading"></app-loading>
+    </div>
   </div>
-  </div>
-  
-    
-  
+</div>
