--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -171,6 +171,8 @@
               </div>
             </div>
           </div>
+          <!-- Loading -->
+          <app-loading [isLoading]="isLoading"></app-loading>
           <!-- Submit -->
           <div class="text-center">
             <button
