feat: import item to shoppinglist

--- a/src/app/shoppinglist/details-component/shoppinglist-details.component.html
+++ b/src/app/shoppinglist/details-component/shoppinglist-details.component.html
@@ -1,2 +1,4 @@
-<p>shoppinglist-details works!</p>
-<div>{{shoppinglist?.shoppinglistName}}</div>
+<div class="conteiner">
+    <h1 class="text-center">{{ shoppinglist?.shoppinglistName | capitalize }}</h1>
+    <app-item-add [shoppinglistId]="shoppinglist?._id"></app-item-add>
+</div>
