feat: implement item

--- a/src/app/shoppinglist/details-component/shoppinglist-details.component.html
+++ b/src/app/shoppinglist/details-component/shoppinglist-details.component.html
@@ -1,4 +1,5 @@
 <div class="conteiner">
     <h1 class="text-center">{{ shoppinglist?.shoppinglistName | capitalize }}</h1>
-    <app-item-add [shoppinglistId]="shoppinglist?._id"></app-item-add>
+    <app-item-add [shoppinglist]="shoppinglist" (itemAdded)="onItemAdded($event)"></app-item-add>
+    <app-item-list [items]="items"></app-item-list>
 </div>
