--- a/src/app/shoppinglist/details-component/shoppinglist-details.component.html
+++ b/src/app/shoppinglist/details-component/shoppinglist-details.component.html
@@ -1,5 +1,19 @@
-<div class="conteiner">
-    <h1 class="text-center">{{ shoppinglist?.shoppinglistName | capitalize }}</h1>
-    <app-item-add [shoppinglist]="shoppinglist" (itemAdded)="onItemAdded($event)"></app-item-add>
-    <app-item-list [items]="items"></app-item-list>
-</div>
+<h1 class="text-center mt-2">{{ shoppinglist?.shoppinglistName | capitalize }}</h1>
+<mat-tab-group dynamicHeight animationDuration="1500ms">
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon class="example-tab-icon">home</mat-icon>
+    </ng-template>
+    <app-item-add
+      [shoppinglist]="shoppinglist"
+      (itemAdded)="onItemAdded($event)"
+    ></app-item-add>
+    <app-item-list [shoppinglist]="shoppinglist"></app-item-list>
+  </mat-tab>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon class="example-tab-icon">shopping_cart</mat-icon>
+    </ng-template>
+    Content 2
+  </mat-tab>
+</mat-tab-group>
