style: remove margin

--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,5 +1,5 @@
-<div class="justify-content-center pb-5">
-  <div class="col-lg-5">
+<div class="mx-sm-5 pb-5 px-3">
+  <div class="justify-content-center pt-4">
     <div class="card bg-transparent shadow border-0 mt-3">
       <div class="card bg-white-transparent mx-3">
         <div class="text-muted text-center mt-3 mb-2">
