--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="mx-sm-5 pb-5 px-sm-5">
-  <div class="justify-content-center mb-4">
+<div class="mx-sm-5 px-3">
+  <div class="justify-content-center">
     <div class="row px-5 pt-4 pb-2">
       <div class="col-6">
         <a routerLink="/user/register" class="text-light">
