--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,11 @@
     class="sidenav"
     fixedInViewport
     [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'"
-    [opened]="(isHandset$ | async) === false"
+    [mode]="'over'"
   >
     <!--<mat-toolbar>Menu</mat-toolbar>-->
     <mat-nav-list color="primary">
-      <a mat-list-item routerLink="#"
+      <a mat-list-item routerLink="shoppinglist/dashboard"
         ><mat-icon>dashboard</mat-icon>Dashboard</a
       >
       <mat-divider></mat-divider>
@@ -40,7 +39,7 @@
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async"
+        *ngIf="drawer.opened === false"
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
@@ -61,7 +60,7 @@
     </mat-toolbar>
 
     <!-- Main -->
-    <div class="container h-99">
+    <div class="h-99">
       <router-outlet></router-outlet>
     </div>
 
