fix: form to center

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,14 +1,14 @@
-<div class="mx-sm-5 px-3">
-  <div class="justify-content-center">
+<div class="mx-sm-5 pt-5 px-3">
+  <div class="justify-content-center trim">
     <div class="row px-5 pt-4 pb-2">
       <div class="col-6">
         <a routerLink="/user/register" class="text-light">
-          <small>Create new account</small>
+          <a>Create new account</a>
         </a>
       </div>
       <div class="col-6 text-right">
         <a routerLink="javascript:void(0)" class="text-light">
-          <small>Forgot password?</small>
+          <a>Forgot password?</a>
         </a>
       </div>
     </div>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="card bg-transparent shadow border-0">
-      <div class="card-body px-lg-5 py-lg-5">
+      <div class="card-body py-lg-5">
         <div class="text-center text-muted mb-4">
           <small class="yellow">Or login with credentials</small>
         </div>
