--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -7,3 +7,8 @@
 .yellow { 
     color: #f7ffa8!important;
 }
+.trim {
+    max-width: 600px !important;
+    margin:auto;
+    position: relative !important;
+}
