--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
     [mode]="'over'"
   >
     <!--<mat-toolbar>Menu</mat-toolbar>-->
-    <mat-nav-list color="primary">
-      <a mat-list-item routerLink="shoppinglist/dashboard"
+    <mat-nav-list (click)="drawer.toggle()" color="primary">
+      <a mat-list-item [routerLink]="(isLogged$ | async) ? ['/shoppinglist/dashboard'] : ['/user/login']"
         ><mat-icon>dashboard</mat-icon>Dashboard</a
       >
       <mat-divider></mat-divider>
