--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,39 @@
-.mb0 div h3 { 
-    margin-bottom: 0px !important;
+.mb0 h3 {
+  margin-bottom: 0px !important;
+  padding: 0px !important;
+ 
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+
+    @media (min-width: 0px) {
+        margin-left: 50px;
+        margin-right: 5px;
+      }
+    
+      @media (min-width: 480px) {
+        margin-left: 100px;
+        margin-right: 5px;
+      }
+      
+      @media (min-width: 576px) {
+        margin-left: 150px;
+        margin-right: 5px;
+      }
+
+      @media (min-width: 765px) {
+        margin-left: 80px;
+        margin-right: 5px;
+      }
+    
+      @media (min-width: 825px) {
+        margin-left: 150px;
+        margin-right: 5px;
+      }
+    
+      @media (min-width: 992px) {
+        margin-left: 220px;
+        margin-right: 80px;
+      }
 }
