feat: implement delete shoppinglist

--- a/src/app/item/item-add-component/item-add.component.html
+++ b/src/app/item/item-add-component/item-add.component.html
@@ -2,7 +2,7 @@
 <form
     [formGroup]="addFormGroup"
     (ngSubmit)="onSubmit()"
-    class="row pl-3 pt-2"
+    class="row"
   >
     <button
       aria-label="Add item to shopping list"
