--- a/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.html
+++ b/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.html
@@ -1,13 +1,13 @@
 <div [ngClass]="(cards | async) === '1' ? 'container' : 'container-fluid'">
-  <div class="grid-container mx-3 mb-3 mt-5">
+  <div class="grid-container mx-3 my-5">
     <h1 class="mat-h1 text-center">Dashboard</h1>
     <mat-grid-list cols="2" rowHeight="350px" [gutterSize]="'20px'">
       <mat-grid-tile
-        *ngFor="let shoppinglist of shoppinglists"
+        *ngFor="let shoppinglist of shoppinglists; let i = index;"
         [colspan]="cards | async"
         [rowspan]="1"
       >
-        <mat-card (click)="onClick(shoppinglist._id)" class="dashboard-card">
+        <mat-card (click)="onClick(shoppinglist._id)" class="dashboard-card" #matcard>
           <mat-card-header>
             <mat-card-title class="card-title">
               {{ shoppinglist.shoppinglistName }}
@@ -16,20 +16,16 @@
                 class="more-button"
                 [matMenuTriggerFor]="menu"
                 aria-label="Toggle menu"
-                (click)="onClick(this)"
+                (menuOpened)="menuOpened()"
+                (menuClosed)="menuClosed()"
               >
                 <mat-icon>more_vert</mat-icon>
               </button>
-              <mat-menu
-                #menu="matMenu"
-                (menuClosed)="(menuClosed)"
-                xPosition="before"
-                class="mat-menu"
-              >
-                <button mat-menu-item>
-                  <a href="#">
+              <mat-menu #menu="matMenu" xPosition="before" class="mat-menu">
+                <button mat-menu-item (click)="delete(shoppinglist._id , i)">
+                  
                     <span class="material-icons md-light">delete</span>
-                  </a>
+                  
                 </button>
               </mat-menu>
             </mat-card-title>
