--- a/src/app/shoppinglist/details-component/shoppinglist-details.component.html
+++ b/src/app/shoppinglist/details-component/shoppinglist-details.component.html
@@ -1,21 +1,23 @@
-<h1 class="text-center mt-2">{{ shoppinglist?.shoppinglistName | capitalize }}</h1>
-<mat-tab-group dynamicHeight animationDuration="1500ms">
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon class="example-tab-icon">home</mat-icon>
-    </ng-template>
-    <app-item-add
-      [shoppinglist]="shoppinglist"
-      (itemAdded)="onItemAdded($event)"
-    ></app-item-add>
-    <app-item-list 
-    [shoppinglist]="shoppinglist"
-    ></app-item-list>
-  </mat-tab>
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon class="example-tab-icon">shopping_cart</mat-icon>
-    </ng-template>
-    Content 2
-  </mat-tab>
-</mat-tab-group>
+<div class="m-4">
+  <h1 class="text-center mt-2">
+    {{ shoppinglist?.shoppinglistName | capitalize }}
+  </h1>
+  <mat-tab-group dynamicHeight animationDuration="1500ms" class="trim">
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon class="example-tab-icon">home</mat-icon>
+      </ng-template>
+      <app-item-add
+        [shoppinglist]="shoppinglist"
+        (itemAdded)="onItemAdded($event)"
+      ></app-item-add>
+      <app-item-list [shoppinglist]="shoppinglist"></app-item-list>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon class="example-tab-icon">shopping_cart</mat-icon>
+      </ng-template>
+      Content 2
+    </mat-tab>
+  </mat-tab-group>
+</div>
