fix: remove unnecessary tag

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -2,13 +2,13 @@
   <div class="justify-content-center trim">
     <div class="row px-5 pt-4 pb-2">
       <div class="col-6">
-        <a routerLink="/user/register" class="text-light">
-          <a>Create new account</a>
+        <a routerLink="/user/register" class="text-light" target="_blank">
+          Create new account
         </a>
       </div>
       <div class="col-6 text-right">
-        <a routerLink="javascript:void(0)" class="text-light">
-          <a>Forgot password?</a>
+        <a routerLink="/" class="text-light" target="_blank">
+          Forgot password?
         </a>
       </div>
     </div>
