refactor: add EventEmitter

--- a/src/app/item/item-list-component/item-list.component.html
+++ b/src/app/item/item-list-component/item-list.component.html
@@ -3,6 +3,7 @@
     <app-item
       [shoppinglist]="shoppinglist"
       [item]="item"
+      (itemChange)="itemChanged($event)"
     ></app-item>
   </mat-list-item>
 </mat-list>
