--- a/src/app/shoppinglist/details-component/shoppinglist-details.component.html
+++ b/src/app/shoppinglist/details-component/shoppinglist-details.component.html
@@ -2,7 +2,7 @@
   <h1 class="text-center mt-2">
     {{ shoppinglist?.shoppinglistName | capitalize }}
   </h1>
-  <mat-tab-group dynamicHeight animationDuration="1500ms" class="trim">
+  <mat-tab-group dynamicHeight animationDuration="500ms" class="trim">
     <mat-tab>
       <ng-template mat-tab-label>
         <mat-icon class="example-tab-icon">home</mat-icon>
@@ -11,13 +11,18 @@
         [shoppinglist]="shoppinglist"
         (itemAdded)="onItemAdded($event)"
       ></app-item-add>
-      <app-item-list [shoppinglist]="shoppinglist"></app-item-list>
+      <app-item-list 
+        [shoppinglist]="shoppinglist"
+        (itemChange)="itemChanged($event)"
+      ></app-item-list>
     </mat-tab>
     <mat-tab>
       <ng-template mat-tab-label>
         <mat-icon class="example-tab-icon">shopping_cart</mat-icon>
       </ng-template>
-      Content 2
+      <app-item-subscribed-list
+        [shoppinglist]="shoppinglist"
+      ></app-item-subscribed-list>
     </mat-tab>
   </mat-tab-group>
 </div>
