--- a/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.scss
+++ b/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.scss
@@ -1,5 +1,3 @@
-
-  
   .dashboard-card {
     position: absolute;
     top: 30px;
@@ -34,4 +32,13 @@
   ::ng-deep .mat-card{
     padding: 50px !important;
     border-radius: 20px !important;
+  }
+
+  ::ng-deep .mat-card-header{
+    margin-bottom: 10px !important;
+  }
+
+  ::ng-deep .mat-card-content{
+    padding-top: 1rem !important;
+    margin-bottom: 0px !important;
   }
