--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="width flex justify-content-center">
   <div class="mt-5 text-center">
-    <h1>
+    <h1 class="font-bigger">
       <span> Your shopping list </span>
       <br />
       <span class="font-weight-light">
