style: add bigger font

--- a/src/app/item/item-subscribed/item-subscribed.component.html
+++ b/src/app/item/item-subscribed/item-subscribed.component.html
@@ -1,3 +1,4 @@
-<div *ngIf="subscriber">
-    {{item.itemName}}
+<div [ngStyle]="{'font-size':'20px'}">
+    {{ item.itemName }}
 </div>
+<mat-divider></mat-divider>
