--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -30,9 +30,9 @@
           <div class="form-group" [ngClass]="{ focused: focus === true }">
             <div class="input-group input-group-alternative">
               <div class="input-group-prepend">
-                <span class="input-group-text"
-                  ><i class="ni ni-hat-3"></i
-                ></span>
+                <span class="input-group-text">
+                  <mat-icon>person</mat-icon>
+                </span>
               </div>
               <input
                 class="form-control"
@@ -63,9 +63,9 @@
           <div class="form-group" [ngClass]="{ focused: focus1 === true }">
             <div class="input-group input-group-alternative">
               <div class="input-group-prepend">
-                <span class="input-group-text"
-                  ><i class="ni ni-email-83"></i
-                ></span>
+                <span class="input-group-text">
+                  <mat-icon>email</mat-icon>
+                </span>
               </div>
               <input
                 class="form-control"
@@ -89,9 +89,9 @@
           <div class="form-group" [ngClass]="{ focused: focus2 === true }">
             <div class="input-group input-group-alternative">
               <div class="input-group-prepend">
-                <span class="input-group-text"
-                  ><i class="ni ni-lock-circle-open"></i
-                ></span>
+                <span class="input-group-text">
+                  <mat-icon>vpn_key</mat-icon>
+                </span>
               </div>
               <input
                 class="form-control"
@@ -118,9 +118,9 @@
           <div class="form-group" [ngClass]="{ focused: focus2 === true }">
             <div class="input-group input-group-alternative">
               <div class="input-group-prepend">
-                <span class="input-group-text"
-                  ><i class="ni ni-lock-circle-open"></i
-                ></span>
+                <span class="input-group-text">
+                  <mat-icon>vpn_key</mat-icon>
+                </span>
               </div>
               <input
                 class="form-control"
@@ -153,19 +153,20 @@
           </div>
           <!-- Privacy Policy -->
           <div class="row my-4">
-            <div class="col-12">
+            <div class="col-12 text-center">
               <div
                 class="custom-control custom-control-alternative custom-checkbox"
               >
                 <input
                   class="custom-control-input"
+                  formControlName="privacyPolicy"
                   id="customCheckRegister"
                   type="checkbox"
                 />
-                <label class="custom-control-label" for="customCheckRegister">
+                <label class="custom-control-label pt-1" for="customCheckRegister">
                   <span
                     >I agree with the
-                    <a href="javascript:void(0)">Privacy Policy</a>
+                    <a [routerLink]="" (click)="openDialog()">Privacy Policy</a>
                   </span>
                 </label>
               </div>
