feat: add icons in input fields

--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -12,7 +12,8 @@
     margin:auto;
     position: relative !important;
 }
-.checkbox-margin {
-    margin-top: 2px;
-    margin-right: 5px;
-}
+// .checkbox-margin {
+//     margin-right: 5px;
+//     width: 15px;
+//     height: 15px;
+// }
