--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -42,9 +42,9 @@
           <div class="form-group mb-3" [ngClass]="{ focused: focus === true }">
             <div class="input-group input-group-alternative">
               <div class="input-group-prepend">
-                <span class="input-group-text"
-                  ><i class="ni ni-email-83"></i
-                ></span>
+                <span class="input-group-text">
+                  <mat-icon>email</mat-icon>
+                </span>
               </div>
               <input
                 class="form-control"
@@ -67,9 +67,9 @@
           <div class="form-group" [ngClass]="{ focused: focus1 === true }">
             <div class="input-group input-group-alternative">
               <div class="input-group-prepend">
-                <span class="input-group-text"
-                  ><i class="ni ni-lock-circle-open"></i
-                ></span>
+                <span class="input-group-text">
+                  <mat-icon>vpn_key</mat-icon>
+                </span>
               </div>
               <input
                 class="form-control"
@@ -92,13 +92,14 @@
             </p>
           </div>
           <div class="form-group mt-4">
-            <div class="input-group input-group-alternative justify-content-center">
+            <div class="custom-control custom-control-alternative custom-checkbox text-center">
               <input
-                class="checkbox-margin"
+                class="custom-control-input"
                 formControlName="rememberMe"
+                id="rememberMe"
                 type="checkbox"
               />
-              <label>
+              <label class="custom-control-label pt-1" for="rememberMe">
                 <span>Remember me</span>
               </label>
             </div>
