--- a/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.scss
+++ b/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.scss
@@ -1,44 +1,70 @@
-  .dashboard-card {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    right: 30px;
-    bottom: 30px;
-    background-color: #ffffff21;
-    
-  }
-  
-  .card-title {
-    color: #dac7fc;
-  }
-  
-  .more-button {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-  } 
-  
-  .dashboard-card-content {
-    text-align: start;
-    padding-left: 3%;
-    color: rgb(15, 1, 1);
-  }
-  
-  ::ng-deep .mat-menu{
-    background-color:rgba(255, 255, 255, 0);
-    width: 30px;
-  }
+.content {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 
-  ::ng-deep .mat-card{
-    padding: 50px !important;
-    border-radius: 20px !important;
-  }
+.content > mat-card {
+  min-width: 350px;
+  max-width: 700px;
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  background-color: #ffffff21;
+}
 
-  ::ng-deep .mat-card-header{
-    margin-bottom: 10px !important;
-  }
+.card-title {
+  color: #dac7fc;
+  font-size: x-large;
+}
 
-  ::ng-deep .mat-card-content{
-    padding-top: 1rem !important;
-    margin-bottom: 0px !important;
-  }
+.button-right-corner {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+}
+
+.favorite-icon {
+  font-size: 28px !important;
+}
+
+.button-left-corner {
+  position: absolute;
+  top: 15px;
+  left: 10px;
+}
+
+.card-content {
+  padding-left: 3%;
+}
+
+::ng-deep .mat-card {
+  padding: 50px !important;
+  border-radius: 20px !important;
+}
+
+h1 {
+  text-align: center !important;
+  margin-top: 3rem !important;
+  font-size: xx-large !important;
+  text-shadow: 2px 2px 7px white;
+}
+
+.mt-6 {
+  margin-top: 4.5rem !important;
+}
+
+::ng-deep .mat-card-header {
+  justify-content: center;
+}
+
+::ng-deep .mat-card-content {
+  margin-bottom: 0.5rem !important;
+}
+
+::ng-deep .mat-menu-background {
+  background-image: url("/assets/images/coffee.jpg");
+  background-size: inherit;
+  background-position-x: revert;
+}
